dnl Process this file with autoconf to produce a configure script.
AC_INIT(runok.in)

dnl Checks for programs.
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile runok runrte)
